--- a/src/app/navs/find-nav/find-nav.component.css
+++ b/src/app/navs/find-nav/find-nav.component.css
@@ -39,7 +39,7 @@
 /* Estilos para los inputs */
 .find-nav input {
     flex: 1;
-    padding: 8px 5px;
+    padding: 8px 0px;
     border: none;
     font-size: 16px;
     color: #333;
@@ -84,7 +84,61 @@
 /* Responsividad */
 @media (max-width: 768px) {
     .find-nav {
-        display: none;
+       
+        gap: 0px;
+
+        padding: 2px 10px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        min-width: 350px;
+        max-width: 650px;
+        height: 45px;
     }
 
+.find-nav input {
+    font-size: 12px;
+}
+
+
+.find-nav .search-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3B9AB8;
+    color: white;
+    border: none;
+    border-radius: 7px;
+    padding: 10px 40px;
+    font-size: 12px;
+    font-weight: 400;
+    cursor: pointer;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    height: 30px;
+    width: 80px;
+}
+.svg {
+    max-width: 15px;
+}
+
+}
+@media (max-width: 640px) {
+    .find-nav {
+        gap: 2px;
+        padding: 2px 10px;
+        height: 33px;
+    }
+    .find-nav input {
+        font-size: 10px;
+    }
+    .find-nav .search-button {
+        font-size: 10px;
+        height: 25px;
+        width: 50px;
+    }
+    .find-nav .separator {
+        height: 23px;
+        margin: 0 5px;
+    }
+    .svg {
+        max-width: 12px;
+    }
 }
