--- a/src/app/navs/user-nav/user-nav.component.html
+++ b/src/app/navs/user-nav/user-nav.component.html
@@ -1,68 +1,76 @@
 <div class="flex items-center">
+  <!-- Botón "Añadir doctor" -->
   @if (isUsuario && usuario.rol === 'admin') {
-    <div (click)="abrirFormulario()" class="mr-6 cursor-pointer">
-      <button class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-5 py-3 rounded-md">
-        <svg class="mr-1 min-w-[24px]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+    <div (click)="abrirFormulario()" class="mr-4 sm:mr-6 cursor-pointer">
+      <button class="flex items-center bg-[#3B9AB8] hover:bg-[#096c8a] text-white px-3 py-2 sm:px-5 sm:py-3 rounded-md transition-colors">
+        <svg class="mr-1 min-w-[20px] sm:min-w-[24px]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
           <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
         </svg>
-        Añadir doctor
+        <span class="text-sm sm:text-base">Añadir doctor</span>
       </button>
     </div>
   }
+
+  <!-- Botón "Disponibilidad" -->
   @if (isDoctor) {
-    <div (click)="abrirFormularioDisponibilidad()" class="mr-6 cursor-pointer">
-      <button class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-5 py-3 rounded-md">
-        <svg class="mr-1 min-w-[24px]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+    <div (click)="abrirFormularioDisponibilidad()" class="mr-4 sm:mr-6 cursor-pointer">
+      <button class="flex items-center bg-[#3B9AB8] hover:bg-[#096c8a] text-white px-3 py-2 sm:px-5 sm:py-3 rounded-md transition-colors">
+        <svg class="mr-1 min-w-[20px] sm:min-w-[24px]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
           <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
         </svg>
-        Disponibilidad
+        <span class="text-sm sm:text-base">Disponibilidad</span>
       </button>
     </div>
   }
-  
-  <div class="relative mr-6">
+
+  <!-- Notificaciones -->
+  <div class="relative mr-4 sm:mr-6">
     <div class="relative cursor-pointer">
       @if (hayCitasNoVistas) {
-        <span class="absolute top-2 right-3 w-2 h-2 bg-red-500 rounded-full z-10"></span>
+        <span class="absolute top-1 right-2 sm:top-2 sm:right-3 w-2 h-2 bg-red-500 rounded-full z-10"></span>
       }
       <button (click)="abrirModal()" class="relative p-2 bg-transparent rounded-full text-gray-700 hover:text-gray-900">
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 256 256">
-          <path fill="currentColor"
-            d="M221.8 175.94c-5.55-9.56-13.8-36.61-13.8-71.94a80 80 0 1 0-160 0c0 35.34-8.26 62.38-13.81 71.94A16 16 0 0 0 48 200h40.81a40 40 0 0 0 78.38 0H208a16 16 0 0 0 13.8-24.06M128 216a24 24 0 0 1-22.62-16h45.24A24 24 0 0 1 128 216m-80-32c7.7-13.24 16-43.92 16-80a64 64 0 1 1 128 0c0 36.05 8.28 66.73 16 80Z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" sm:w-25 sm:h-25 viewBox="0 0 256 256">
+          <path fill="currentColor" d="M221.8 175.94c-5.55-9.56-13.8-36.61-13.8-71.94a80 80 0 1 0-160 0c0 35.34-8.26 62.38-13.81 71.94A16 16 0 0 0 48 200h40.81a40 40 0 0 0 78.38 0H208a16 16 0 0 0 13.8-24.06M128 216a24 24 0 0 1-22.62-16h45.24A24 24 0 0 1 128 216m-80-32c7.7-13.24 16-43.92 16-80a64 64 0 1 1 128 0c0 36.05 8.28 66.73 16 80Z"/>
         </svg>
       </button>
     </div>
   </div>
-  <div class="flex items-center mr-6">
-    <div class="h-10 w-10 rounded-full overflow-hidden cursor-pointer">
-        <img [routerLink]="'/perfil'" src="{{ urlFotoPerfil }}" alt="Foto de perfil de {{ nombre }}" class="h-full w-full object-cover">
+
+  <!-- Foto de perfil y nombre -->
+  <div class="flex items-center mr-4 sm:mr-6">
+    <div class="h-8 w-8 sm:h-10 sm:w-10 rounded-full overflow-hidden cursor-pointer">
+      <img [routerLink]="'/perfil'" src="{{ urlFotoPerfil }}" alt="Foto de perfil de {{ nombre }}" class="h-full w-full object-cover">
     </div>
-    <span class="font-bold ml-3 text-lg">{{ nombre }}</span>
+    <span class="font-bold ml-2 sm:ml-3 text-base sm:text-lg">{{ nombre }}</span>
   </div>
 </div>
+
+<!-- Modal de notificaciones -->
 @if (isModalNotificacionesActive) {
   <app-panel-notificaciones (modalCerrado)="cerrarModal($event)" (notificaciones)="actualizarNotificaciones($event)" />
 }
 
+<!-- Formulario de nuevo doctor -->
 @if (isFormularioActivo) {
   <app-new-doctor (cambiarEstado)="cerrarFormularios($event)" />
 }
 
+<!-- Formulario de disponibilidad -->
 @if (isFormularioDisponibilidadActivo) {
   <app-form-disponibilidad (cambiarEstadoFormDisponibilidad)="cerrarFormularios($event)" [doctor]="doctor" />
 }
 
-
+<!-- Modal de alerta -->
 <div id="alert-modal" class="fixed inset-0 bg-black bg-opacity-30 flex justify-center items-center hidden z-50">
-  <div class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto border-l-4 border-[#3b9ab8]">
+  <div class="bg-white p-4 sm:p-6 rounded-lg shadow-lg max-w-md mx-auto border-l-4 border-[#3b9ab8]">
     <div class="flex items-start space-x-3">
-      <!-- Icono de información -->
-      <svg class="w-12 h-12 text-[#3b9ab8]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <svg class="w-8 h-8 sm:w-12 sm:h-12 text-[#3b9ab8]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 110 20 10 10 0 010-20z" />
       </svg>
-      <p id="alert-message" class="text-gray-800 font-medium"></p>
+      <p id="alert-message" class="text-gray-800 font-medium text-sm sm:text-base"></p>
     </div>
     <button
       class="mt-4 w-full bg-[#3b9ab8] text-white px-4 py-2 rounded-md hover:bg-[#338399] transition"
@@ -72,6 +80,3 @@
     </button>
   </div>
 </div>
-
-
-
