--- a/src/app/vistas/perfil-historial/perfil-historial.component.html
+++ b/src/app/vistas/perfil-historial/perfil-historial.component.html
@@ -1,7 +1,7 @@
 @if (!isMobile) {
   <div class="grid grid-cols-[15%_1fr] h-screen max-[1024px]:grid-cols-1 max-[1024px]:h-auto">
     <div class="max-[1024px]:hidden">
-        <app-left-nav [citas]="true"></app-left-nav>
+        <app-left-nav [perfil]="true"></app-left-nav>
     </div>
     <div class="flex flex-col mx-[5%] max-[1024px]:mx-4">
         <app-secundary-nav [titulo]="'Mi historial'"></app-secundary-nav>
