--- a/front/src/app/vistas/index-doctores/index-doctores.component.css
+++ b/front/src/app/vistas/index-doctores/index-doctores.component.css
@@ -50,3 +50,17 @@ app-footer {
     border: solid 1.5px #e1e1e1;
     box-sizing: border-box;
 }
+
+@media (max-width: 640px) {
+    .body-after-login {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "zh"
+            "zs"
+            "zf";
+    }
+    .container-top {
+        flex-direction: column;
+    }
+
+}
